Fix text alignment of button and menu action base styles

--- a/packages/button/src/_mixins.scss
+++ b/packages/button/src/_mixins.scss
@@ -18,8 +18,8 @@
   align-items: center;
   justify-content: center;
   border-style: solid;
-  font-family: inherit;
-  font-weight: inherit;
+  font: inherit;
+  text-align: center;
   text-decoration: none;
   white-space: nowrap;
   background-clip: border-box;
