--- a/packages/menu/src/_mixins.scss
+++ b/packages/menu/src/_mixins.scss
@@ -17,8 +17,8 @@
   justify-content: flex-start;
   width: 100%;
   border-style: solid;
-  font-family: inherit;
-  font-weight: inherit;
+  font: inherit;
+  text-align: inherit;
   text-decoration: none;
   white-space: normal;
   background-clip: border-box;
